[package]
name = "stb"
version = "0.1.0"
authors = ["xi.nie <xi.nie@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "stb_sys" ]

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
dotenv = "0.15.0"
bitflags = "1.3.2"
stb_sys = { path = "../stb_sys", optional = true }

[dev-dependencies]
glob = "0.3.0"
quickcheck = "1"
